# tictactoe

./: .gitignore  Assignment.md  CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  README.md  assignment.md  cmake_install.cmake  config.hpp  draw.h  index  index.cpp  installer.bat  installer.sh  main.cpp  main_ai_test  main_ai_test.cpp  run_test.bat  tictactoe
assets/: assets.xml
include/: Application.hpp  Config.hpp  Cursor.hpp  Types.hpp
include/Core/: AssetsManager.hpp  ButtonImage.hpp  SceneManager.hpp
include/Scenes/: AboutScene.hpp  GameChooseScene.hpp  MenuScene.hpp  Scene.hpp  SplashScene.hpp
include/Utils/: CheckInput.hpp
include/ai/core/: Algorithm.hpp
include/ai/test/: utils.hpp
include/ai/utils/: Board.hpp  Constants.hpp  Point.hpp
include/utils/: Board.hpp  Math.hpp  Point.hpp
src/: Application.cpp  application.cpp  application.hpp  index.cpp
src/Core/: AssetsManager.cpp  ButtonImage.cpp  SceneManager.cpp
src/Scenes/: AboutScene.cpp  GameChooseScene.cpp  MenuScene.cpp  SplashScene.cpp
src/Utils/: tinyxml2.cpp
src/ai/: ai.cpp  ai.hpp  ai.test  ai.test.cpp  ai.test.hpp  utils.cpp  utils.hpp
src/ai/core/: Algorithm.cpp
src/ai/test/: Algorithm.test.cpp  Board.test.cpp  Point.test.cpp  foo.cpp  index.test.cpp
src/ai/utils/: Board.cpp  Math.cpp  Point.cpp
src/core/: board.cpp  board.hpp  index.h  types.hpp  winningCheck.h
src/draw/: index.h
src/pages/: index.h  playPage.h
src/utils/: CheckInput.cpp
